correcting z-index

--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background: #000;
+    background: white;
 }
 .video-container .poster img {
     width: 100%;
@@ -37,15 +37,11 @@
     position: absolute;
     z-index: 10;
     bottom: 0;
+    top: 0;
 }
 .video-container video.fillWidth {
     width: 100%;
 }
-@font-face {
- font-family: 'LemonMilk';
- src: url('./css/LemonMilk.otf');
-}
-
 h1 {
   font-family: 'LemonMilk'; sans;
   font-size: .75vw;
@@ -98,7 +94,7 @@ h6 {
 }
 nav {
   position: fixed;
-  z-index: 2000000000000;
+  z-index: 9000000000000;
   background-color: white;
   width: 100%;
 }
@@ -630,8 +626,6 @@ width: 25px;
   width:100%;
   height:63vh;
   overflow: hidden;
-  /*border-top: 5px solid #ea0078;
-  border-bottom: 5px solid #ea0078;*/
 }
 
 #video_overlays {
@@ -639,8 +633,6 @@ width: 25px;
   width:100%;
   max-height: 100%;
   background-color:rgba(255, 255, 255, 0.3);
-
-  /*background-color: rgba(40, 20,	60, 0.5);*/
   }
 }
 /*.landingpage-flex-container video {
@@ -654,7 +646,7 @@ width: 25px;
   height:100%;
   -webkit-filter: hue-rotate(50deg);
   filter: hue-rotate(50deg);
-  z-index:1000000000;
+  z-index:10000000;
 }
 
 #video-annotation-2{
@@ -663,7 +655,7 @@ width: 25px;
   top:15%;
   left: 33%;
   width: 35%;
-  z-index: 300000000000000;
+  z-index: 10000000;
   -webkit-animation: fadein 6s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 6s; /* Firefox < 16 */
   -ms-animation: fadein 6s; /* Internet Explorer */
@@ -677,10 +669,10 @@ width: 25px;
 #object{
 width: 30%;
 height: 200px;
-position:absolute;
+position: fixed;
 top:12%;
 margin-left: 3%;
-z-index: 3000000000000;
+z-index: 8000000000000;
 }
 .index-image {
   margin: 4% 0;
@@ -932,5 +924,12 @@ background-color: black;
   }
   .iphone {
     display: none;
+  }
+  video {
+    display: none;
+  }
+  .video-container
+  h6 {
+    font-size: 40px;
   }
 }
